Use menu links correctly (don't repeat icon and text links)
This enables the removal of the inline-block display for links and
fixes menu items not showing up when sidebar is expanded on firefox

--- a/web/app/css/sidebar.css
+++ b/web/app/css/sidebar.css
@@ -18,8 +18,6 @@
 
     & a {
       color: white;
-      display: inline-block;
-      width: 100%;
     }
 
     & .update {
